Add Go implementation

--- a/bip-0136.mediawiki
+++ b/bip-0136.mediawiki
@@ -88,6 +88,7 @@ There are no known compatibility issues.
 
 == Reference implementations ==
 C Reference Implementation: https://github.com/jonasschnelli/bitcoin_txref_code
+Go Reference Implementation: https://github.com/kulpreet/txref
 
 == Appendices ==
 
